# rolodex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
rolodex/: cli.py  rolodex.py
rolodex/rolodex/: rolodex.py
rolodex/rolodex/tests/: test_rolodex.py
tests/: test_rolodex.py
tests/integration/: test_cli.py
tests/integration/data/: test1.csv  test2.json
