[tool.poetry]
name = "rolodex"
version = "0.1.0"
description = ""
authors = ["Martin Le <martin.minh.le@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
mypy = "^1.9.0"
black = "^24.3.0"
pre-commit = "^3.7.0"
types-tabulate = "^0.9.0.20240106"

[tool.poetry-exec-plugin.commands]
cli = "python3 -m rolodex.cli"
lint = "ruff"
test = "pytest -s"
"format:fix" = "ruff format"
"format:check" = "ruff format --check"
"pre-commit:run" = "pre-commit run --all-files --show-diff-on-failure"
"pre-commit:install" = "pre-commit install"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"
select = ["ALL"]
ignore = [
    "D100",
    "D401",
    "D103",
    "ANN201",
    "S101",
    "D101",
    "D107",
    "D102",
    "ANN101",
    "ANN204",
    "T203",
    "PTH123",
    "FBT001",
    "D104",
    "TRY003",
    "EM102",
    "EXE001",
    "EXE003",
    "EXE005",
    "PLR2004",
]
src = ["rolodex"]

[tool.ruff.isort]
known-first-party = [""]

[tool.mypy]
strict = true
disallow_untyped_defs = false
